--- a/8.html
+++ b/8.html
@@ -23,7 +23,7 @@
     }
     #bottomBTN{
         position: relative;
-        top: 0px;
+        top: 20px;
         margin-left : 0px;
     }
     #bottomTips{
@@ -152,7 +152,7 @@
             this.map[2][1] = 6;
             this.map[2][2] = 5;
 
-            this.zeroPosition = 2;
+            this.zeroPosition = 1;
 
             this.goal[0][0] = 1;
             this.goal[0][1] = 2;
@@ -215,28 +215,159 @@
             this.map[y][x] = arg || 0;
         },
 
-        /**
-         * @desc 往左边移动
-         * */
-        BFS: function () {
+        isValid: function () {
+            var a = [];
+            var b = [];
+            for(var i = 0; i < 3; ++i){
+                for(var j = 0; j < 3; ++j){
+                    a.push(this.map[i][j]);
+                    b.push(this.goal[i][j]);
+                }
 
+            }
+            var resultA = 0;
+            var resultG = 0;
+            for(var i = 0; i < a.length; ++i){
+                for(var j = i; j < a.length; ++j){
+                    if(a[i] > a[j] && a[j] !== 0){
+                        resultA++;
+                    }
+                    if(b[i] > b[j]&& b[j] !== 0){
+                        resultG++;
+                    }
+                }
+            }
 
+            return (resultA & 1) === (resultG & 1);
 
         },
 
+        /**
+         * @desc 往左边移动
+         * */
+
+        DFS: function (deepLimit) {
+            if(!this.isValid()){
+                return -1;
+
+            }
+            var data
+
+        },
+
+        BFS: function () {
+            var data = this.map;
+            var tempQueue = [];
+            var tempMap = {};
+            var jsMap = new Map();
+
+            var tempGrid =  [];
+            var goalstr = this.goal.toString();
+
+            var str = data.toString();
+            tempMap[str] = 0;
+            jsMap.set(str, 0);
+
+            for(var i=0; i<3; i++) {
+                tempGrid[i] = tempGrid[i] || [];
+                for(var j=0; j<3; j++) {
+                    tempGrid[i][j] = data[i][j];
+                }
+            }
+
+            tempQueue.push(str);
+            if(!(this.isValid())){
+                return -1;
+            }
+            if(str === goalstr) {
+                return 0;
+            }
+            while(tempQueue.length !== 0){
+                var current = tempQueue[0];
+                var tempStr = tempQueue.shift();
+                tempStr = tempStr.replace(/,/g, '');
+
+                for(var i=0; i<3; i++) {
+                    for(var j=0; j< 3; j++) {
+                        tempGrid[i][j] = parseInt(tempStr[i * 3+ j]);
+                    }
+                }
+
+                for(var j = 0; j < 3; ++j){
+                    for(var k = 0; k < 3; ++k){
+                        data[j][k] = tempGrid[j][k];
+                    }
+                }
+                this.getZeroPosition();
+
+                for(var i = 0; i < 4; ++i){
+                    switch(i){
+                        case 0:
+                            if(this.zeroPosition !== 0 || this.zeroPosition % 3 !== 0){
+                                this.moveLeft();
+                            }break;
+                        case 1:
+                            if(this.zeroPosition / 3 > 0.8){
+                                this.moveUp();
+                            }
+                            break;
+                        case 2:
+                            if(this.zeroPosition % 3 !== 2){
+                                this.moveRight();
+                            }
+                            break;
+                        case 3:
+                            if(this.zeroPosition / 3 <= 2){
+                                this.moveDown();
+                            }
+                            break;
+                    }
+                    str = data.toString();
+                    if(!jsMap.has(str)){
+                        var t = jsMap.get(current);
+                        t += 1;
+                        jsMap.set(str, t);
+                        if(str === goalstr){
+                            return t;
+                        }
+                        tempQueue.push(str);
+
+                    }
+
+
+                    for(var j = 0; j < 3; ++j){
+                        for(var k = 0; k < 3; ++k){
+                            data[j][k] = tempGrid[j][k];
+                        }
+                    }
+
+                    //data = tempGrid;
+                    this.getZeroPosition();
+
+
+
+                }
+            }
+
+        },
+        getZeroPosition : function(){
+            var data = this.map;
+            for(var i = 0; i < data.length; ++i){
+                for(var j = 0; j < data[i].length; ++j){
+                    if(data[i][j] === 0){
+                        this.zeroPosition =  i * 3 + j;
+                        return;
+                    }
+                }
+            }
+        },
+
         moveLeft : function() {
-            /*
-             * 往左边移动；
-             * 从上到下， 从左到右， 循环；
-             * 从0开始继续循环到当前的元素 ，如果左侧的是0，而且之间的空格全部为0 ， 那么往这边移，
-             * 如果左边的和当前的值一样， 而且之间的空格值全部为0, 就把当前的值和最左边的值相加,赋值给最左边的值;
-             * */
             var data = this.map;
             var result = [];
             for(var i=0; i<data.length; i++ ) {
                 for(var j=1; j<data[i].length ; j++) {
                     if (data[i][j] === 0) {
-
                         var temp = data[i][j];
                         data[i][j] = data[i][j - 1] ;
                         data[i][j - 1] =temp;
@@ -253,6 +384,7 @@
             for(var i=0; i<data.length; i++ ) {
                 for(var j=0 ; j < data[i].length - 1; j++) {
                     if (data[i][j] === 0) {
+
                         data[i][j] = data[i][j+1];
                         data[i][j+1] = 0;
                         result.push({form:{x:i,y:j}, to:{x:i,y:j+1}});
@@ -270,6 +402,7 @@
                 // 循环要检测的高度
                 for(var j=0; j<data[0].length; j++) {
                     if (data[i][j] === 0) {
+
                         data[i][j] = data[i-1][j];
                         data[i - 1][j] = 0;
                         result.push({form:{x:i,y:j}, to:{x:i-1,y:j}});
@@ -286,6 +419,7 @@
             for(var i=0; i < data.length - 1; i++ ) {
                 for(var j=0; j < data[0].length ; j++) {
                     if (data[i][j] === 0) {
+
                         data[i][j] = data[i + 1][j];
                         data[i+1][j] = 0;
                         result.push({form:{x:i,y:j}, to:{x:i+1,y:j}});
@@ -328,12 +462,34 @@
             this.bindEvents();
         },
         bindEvents : function() {
+            $("#btnBFS").click(function () {
+                var t = this.data.BFS();
+                if(t !== -1 ){
+                    alert("The steps you need by BFS: " + t);
+                    this.renderHTML();
+
+                }else{
+                    alert("fucked up!");
+                }
+
+            }.bind(this));
             $("#reBTN").click(function(){
                 //alert("a");
                 //this.data.generationBlock();
                 this.data.getRandom();
                 this.animateShowBlock();
             }.bind(this));
+
+            $("#btnDFS").click(function () {
+                var t = this.data.DFS();
+                if(t !== -1 ){
+                    alert("The steps you need by DFS: " + t);
+                    this.renderHTML();
+                }else{
+                    alert("fucked up!");
+                }
+            }.bind(this));
+
             $(document).keydown(function(ev){
                 var animationArray = [];
                 switch(ev.keyCode) {
@@ -368,6 +524,7 @@
         var view = new View({ data :data, el : document.getElementById("g") });
         $.extend( true, view, util );
         view.renderHTML();
+        //alert("WASD控制方向");
         /*        $("#reBTN").click(function(){
          data.generationBlock();
          });*/
