--- a/8.html
+++ b/8.html
@@ -823,7 +823,7 @@
         var view = new View({ data :data, el : document.getElementById("g"), gl : document.getElementById("goals")  });
         $.extend( true, view, util );
         view.renderHTML();
-        alert("WASD控制空格方向，W向上，A向右，S向下，D向左");
+        alert("WASD控制空格方向，W向上，A向左，S向下，D向右");
         /*        $("#reBTN").click(function(){
          data.generationBlock();
          });*/
