--- a/8.html
+++ b/8.html
@@ -719,6 +719,10 @@
                 var bfs = $("#bfsCheck").get(0).checked;
                 var dfs = $("#dfsCheck").get(0).checked;
                 var bestfs = $("#bestfsCheck").get(0).checked;
+                if(bfs + dfs + bestfs === 0){
+                    alert("Please select one method before pressing Search!");
+                    return;
+                }
                 if(bfs + dfs + bestfs >= 2){
                     alert("Don't choose searching options more than one!");
                     return;
@@ -734,7 +738,10 @@
 
             }.bind(this));
             $("#btnBFS").click(function () {
+                var begin = new Date();
                 var t = this.data.BFS();
+                var end = new Date();
+                var time = end - begin;
                 if(t !== -1 ){
                     /*
                     if(confirm("The minimum steps you need to reach the goal searching by BFS is: " + t + "\nThe actual steps required in searching is: "
@@ -745,7 +752,7 @@
                     }
                     */
                     alert("The minimum steps you need to reach the goal searching by \nBFS is: " + t + "\nThe actual steps required in searching is: "
-                        + this.data.BFSsteps);
+                        + this.data.BFSsteps +"\nUsing " + time + " ms.");
                     this.renderHTML();
                     document.getElementById("judge").innerHTML = "Yes";
                     document.getElementById("steps").innerHTML = this.data.BFSsteps;
@@ -761,10 +768,13 @@
 
             $("#btnBestFS").click(function () {
                 //alert("best");
+                var begin = new Date();
                 var t = this.data.BestFS();
+                var end = new Date();
+                var time = end - begin;
                 if(t !== -1){
                     alert("The minimum steps you need to reach the goal searching by \nBest-First Search is: " + t + "\nThe actual steps required in searching is: "
-                        + this.data.BestFSsteps);
+                        + this.data.BestFSsteps +"\nUsing " + time + " ms.");
                     this.renderHTML();
                     document.getElementById("judge").innerHTML = "Yes";
                     document.getElementById("steps").innerHTML = this.data.BestFSsteps;
@@ -786,9 +796,12 @@
             }.bind(this));
 
             $("#btnDFS").click(function () {
+                var begin = new Date();
                 var t = this.data.DFS();
+                var end = new Date();
+                var time = end - begin;
                 if(t !== -1 ){
-                    alert("The steps you need by DFS is: " + this.data.DFSsteps + ", after searching in " + t + " depth.");
+                    alert("The steps you need by DFS is: " + this.data.DFSsteps + ", after searching in " + t + " depth." +"\nUsing " + time + " ms.");
                     this.renderHTML();
                     document.getElementById("judge").innerHTML = "Yes";
                     document.getElementById("steps").innerHTML = this.data.DFSsteps;
